// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package proto;

enum OpType {
	Void = 0;
	Account = 1;
	Account_Index = 2;
	Game = 3;
}

enum OpMethod {
	PUT = 0;
	GET = 1;
	DEL = 2;
    CHK = 3;
}

message DbRequest {
  uint32 type = 1;
  uint32 method = 2;
  bytes key = 3;
  bytes value = 4;
}

message DbReply {
  bytes value = 1;
}

service DbService {
  rpc DbOperation (DbRequest) returns (DbReply) {}
  rpc DbOperations (stream DbRequest) returns (stream DbReply) {}
}
